# VIM-LMIC

./: .gitignore  README.md  build.sh  install.sh
examples/spi/: Makefile  main  main.cpp
examples/thethingsnetwork-send-v1/: CMakeLists.txt  Makefile  build.sh  my_project_config.h  thethingsnetwork-send-v1.cpp
examples/thethingsnetwork-send-v2/: .gitignore  CMakeLists.txt  Credentials.h  Makefile  thethingsnetwork-send-v2.cpp
examples/thethingsnetwork-send-v2-zeromq/: CMakeLists.txt  Credentials.h  Helper.cpp  ZeroMQ.cpp  install.sh  my_project_config.h  thethingsnetwork-send-v2-zeromq.cpp
examples/thethingsnetwork-send-v2-zeromq/service/: cbridge.service
lmic/: config.h  hal.c  radio.c
old/: README.md
old/examples/thethingsnetwork-send-v1/: .gitignore  Makefile  thethingsnetwork-send-v1.cpp
old/src/: hal.c  radio.c
project_config/: lmic_project_config.h
src/: CMakeLists.txt
src/hal/: getpinmap_thisboard.cpp  hal.cpp
src/lmic/: config.h  oslmic.c  radio.c
